# mandel-set

./: .gitignore  .pylintrc  README.rst  mandel.py  setup.cfg  setup.py
.github/workflows/: pylint.yml  pytest.yml
src/kfractal/: __init__.py  mandel.py
test/: test_suite.py
