###############################################################################
# Setuptools
###############################################################################

[metadata]
name = kfractal
description = Display fractals
long_description = file: README.rst
license = BSD-3-Clause
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.8
package_dir=
    =src
packages = find:
install_requires =
    matplotlib

[options.packages.find]
where=src

[options.extras_require]
testing =
    black
    pytest

[options.entry_points]
console_scripts =
    kmandel = kfractal.mandel:cmd_mandel
    kjulia = kfractal.mandel:cmd_julia

###############################################################################
# Linting
###############################################################################

[flake8]
max-line-length = 80
# max-complexity = 12
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
select = C,E,F,W,B,B9
exclude =
    .pyre/
